# AudioProcess-Deploy-R328

./: CMakeLists.txt  build_R328.sh
sample/: test_nkf_aec.cpp
src/: AudioProcess.h  mnn_adapter.h  neural_karlman_filter.h
src/c_api/: c_api.cc  c_api.h  c_api_define.h
src/ns/: denoise.h
